* patches/gcc-4.1.2/generic/series, patches/gcc-4.1.2/generic/gcc-4.1.1-pr34130.diff, ChangeLog: 	fixed gcc's pr34130
git-svn-id: https://svn.pengutronix.de/svn/oselas/toolchain/branches/OSELAS.Toolchain-1.1-branch@4860 f8d472c7-5700-0410-ac5a-87979cec3adf

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-07 Marc Kleine-Budde <mkl@pengutronix.de>
+	* patches/gcc-4.1.2/generic/gcc-4.1.1-pr34130.diff:
+	added fix for gcc's pr34130
+
 2007-10-29 Marc Kleine-Budde <mkl@pengutronix.de>
 
 	* rules/cross-gcc-second.make: remove .la files,
